force-app/main/default/objects/Account/fields/Humidifier_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Humidifier_Short_Name__c</fullName>
    <formula>Humidifier_Registration__r.Product2.ProductShortName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Humidifier Short Name</label>
    <type>Text</type>
</CustomField>