force-app/main/default/objects/Account/fields/Humidifier_Units__c.field-meta.xml
<CustomField>
    <fullName>Humidifier_Units__c</fullName>
    <inlineHelpText>Climate Control and Climate Control Max kits (last 12 months)</inlineHelpText>
    <label>Humidifier Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>