force-app/main/default/objects/Account/fields/Humidifier_Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Humidifier_Warranty_End_Date__c</fullName>
    <formula>Humidifier_Registration__r.Warranty_End_Date_Non_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Humidifier Warranty End Date</label>
    <type>Date</type>
</CustomField>