force-app/main/default/objects/Account/fields/Initial_Agreement_on_T_C__c.field-meta.xml
<CustomField>
    <fullName>Initial_Agreement_on_T_C__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The patient&#39;s declaration to agreeing on the information statement and data privacy before Registering.</description>
    <label>Initial Agreement on T&amp;C</label>
    <type>Checkbox</type>
</CustomField>