force-app/main/default/objects/Account/fields/Is_Resmed_Employee__c.field-meta.xml
<CustomField>
    <fullName>Is_Resmed_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Medical Affairs Phase 2 development. Refer to COAS-93 for more details.</description>
    <label>Is Resmed Employee</label>
    <type>Checkbox</type>
</CustomField>