force-app/main/default/objects/Account/fields/Is_Using_Device_For_Treament__c.field-meta.xml
<CustomField>
    <fullName>Is_Using_Device_For_Treament__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MA Registration Field - &quot;Do You Use a Device For Treatment&quot;. This should be enabled if any of the Primary Diagnosis is selected (except when *Prefer not to mention* or *I do not have a relevant medical diagnosis* option is selected).</description>
    <label>Do You Use A Device For Treatment</label>
    <type>Checkbox</type>
</CustomField>