force-app/main/default/objects/Account/fields/Is_Using_Humidifier__c.field-meta.xml
<CustomField>
    <fullName>Is_Using_Humidifier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do You Use A Humidifier</label>
    <type>Checkbox</type>
</CustomField>