force-app/main/default/objects/Account/fields/Iso_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Iso_Currency_Code__c</fullName>
    <description>populated by the Oracle integration feed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ISO Currency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>