force-app/main/default/objects/Account/fields/isWebEnabled__c.field-meta.xml
<CustomField>
    <fullName>isWebEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>sleepVantage use only. If checked, the partner will display on the online partner list. If false, the partner will not be displayed.</description>
    <inlineHelpText>sleepVantage use only. If checked, the partner will display on the online partner list. If false, the partner will not be displayed.</inlineHelpText>
    <label>Outlet Directory Listed</label>
    <type>Checkbox</type>
</CustomField>