force-app/main/default/objects/Account/fields/Last_Contact_Date_for_Recruitment__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date_for_Recruitment__c</fullName>
    <description>Date Medical Affairs or Product teams last made contact with sv member to try and recruit them for their patient trials.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Last contact date for any patient trial registry</inlineHelpText>
    <label>Last Contact Date for Recruitment</label>
    <type>Date</type>
</CustomField>