force-app/main/default/objects/Account/fields/Last_Modified_Date_By_MC__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_By_MC__c</fullName>
    <description>This field contains the last modified by (date/time) when Marketing Cloud updates the Opt-In flags for External Records (MCS/CPAP/Retail/Sleep Remedy/Eden Sleep/ResSleep). Note that its value will only change when the MC user account (Tracking User).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Modified Date By MC</label>
    <type>DateTime</type>
</CustomField>