force-app/main/default/objects/Account/fields/Last_Modified_SleepVantage__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_SleepVantage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indicates the last time this record was modified in such a way that it should be synced to SleepVantage</inlineHelpText>
    <label>Last Modified (SleepVantage)</label>
    <type>DateTime</type>
</CustomField>