force-app/main/default/objects/Account/fields/LastName_SPE__c.field-meta.xml
<CustomField>
    <fullName>LastName_SPE__c</fullName>
    <description>Encrypted Last Name For Members</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Last Name (PE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>