force-app/main/default/objects/Account/fields/latestPurchaseLifeCycleSnapshotDevice__c.field-meta.xml
<CustomField>
    <fullName>latestPurchaseLifeCycleSnapshotDevice__c</fullName>
    <description>Represents the latest purchaseLifeCycleSnapshot for a device from the related device Product Registrations</description>
    <inlineHelpText>Represents the latest purchaseLifeCycleSnapshot for a device from the related device Product Registrations</inlineHelpText>
    <label>Latest Purchase Lifecycle Device</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>