force-app/main/default/objects/Account/fields/latestPurchaseLifeCycleSnapshotDeviceYrs__c.field-meta.xml
<CustomField>
    <fullName>latestPurchaseLifeCycleSnapshotDeviceYrs__c</fullName>
    <formula>latestPurchaseLifeCycleSnapshotDevice__c /365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Purchase Lifecycle Device (Yrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>