force-app/main/default/objects/Account/fields/latestPurchaseLifeCycleSnapshotMask__c.field-meta.xml
<CustomField>
    <fullName>latestPurchaseLifeCycleSnapshotMask__c</fullName>
    <description>Represents the latest purchaseLifeCycleSnapshot for a mask from the related mask Product Registrations</description>
    <inlineHelpText>Represents the latest purchaseLifeCycleSnapshot for a mask from the related mask Product Registrations</inlineHelpText>
    <label>Latest Purchase Lifecycle Mask</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>