force-app/main/default/objects/Account/fields/latestPurchaseLifeCycleSnapshotMaskYrs__c.field-meta.xml
<CustomField>
    <fullName>latestPurchaseLifeCycleSnapshotMaskYrs__c</fullName>
    <formula>latestPurchaseLifeCycleSnapshotMask__c /365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Purchase Lifecycle Mask (Yrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>