force-app/main/default/objects/Account/fields/Local_District_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_District_Name__c</fullName>
    <description>Name of Local health district</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Local District Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>