force-app/main/default/objects/Account/fields/Mailing_City_SPE__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City_SPE__c</fullName>
    <description>Encrypted Mailing City (PE) For Members</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Mailing City (PE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>