force-app/main/default/objects/Account/fields/Mailing_Country_SPE__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country_SPE__c</fullName>
    <description>Encrypted Mailing Country (PE) For Members</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Mailing Country (PE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>