force-app/main/default/objects/Account/fields/Mailing_State_Province_SPE__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State_Province_SPE__c</fullName>
    <description>Encrypted Mailing State (PE) For Members</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Mailing State/Province (PE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>