force-app/main/default/objects/Account/fields/Mailing_Street_SPE__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_SPE__c</fullName>
    <description>Encrypted Mailing Street (PE) For Members</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Mailing  Street (PE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>