force-app/main/default/objects/Account/fields/Mailing_Zip_Postal_Code_SPE__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip_Postal_Code_SPE__c</fullName>
    <description>Encrypted Mailing Zip/Postal Code (PE) For Members</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Mailing Zip/Postal Code (PE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>