force-app/main/default/objects/Account/fields/Marketing_Hub__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Hub__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be ticked with outlets sign up to the marketing hub</description>
    <label>Marketing Hub</label>
    <type>Checkbox</type>
</CustomField>