force-app/main/default/objects/Account/fields/marketingOptOut__c.field-meta.xml
<CustomField>
    <fullName>marketingOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box is the member does not want to receive marketing materials (email, phone and postal mail).</inlineHelpText>
    <label>Marketing Opt-Out</label>
    <type>Checkbox</type>
</CustomField>