force-app/main/default/objects/Account/fields/Mask_Product_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Mask_Product_Short_Name__c</fullName>
    <formula>Mask_Registration__r.Product2.ProductShortName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mask Product Short Name</label>
    <type>Text</type>
</CustomField>