force-app/main/default/objects/Account/fields/Mask_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Mask_Purchase_Date__c</fullName>
    <formula>Mask_Registration__r.PurchaseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mask Purchase Date</label>
    <type>Date</type>
</CustomField>