force-app/main/default/objects/Account/fields/Mask_Referring_Partner__c.field-meta.xml
<CustomField>
    <fullName>Mask_Referring_Partner__c</fullName>
    <formula>Mask_Registration__r.referringPartner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mask Referring Partner</label>
    <type>Text</type>
</CustomField>