force-app/main/default/objects/Account/fields/Mask_Registration__c.field-meta.xml
<CustomField>
    <fullName>Mask_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mask Registration</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Accounts (Mask Registration)</relationshipLabel>
    <relationshipName>Accounts_Mask</relationshipName>
    <type>Lookup</type>
</CustomField>