force-app/main/default/objects/Account/fields/Mask_Replacement_Date__c.field-meta.xml
<CustomField>
    <fullName>Mask_Replacement_Date__c</fullName>
    <formula>Mask_Registration__r.Replacement_Date_Non_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mask Replacement Date</label>
    <type>Date</type>
</CustomField>