force-app/main/default/objects/Account/fields/Mask_Type_Used__c.field-meta.xml
<CustomField>
    <fullName>Mask_Type_Used__c</fullName>
    <label>Mask Type Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reusable</fullName>
            </value>
            <value>
                <fullName>Vented</fullName>
            </value>
            <value>
                <fullName>Non Vented</fullName>
            </value>
            <value>
                <fullName>Disposable Vented</fullName>
            </value>
            <value>
                <fullName>Disposable Non Vented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>