force-app/main/default/objects/Account/fields/Mask_Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Mask_Warranty_End_Date__c</fullName>
    <formula>Mask_Registration__r.Warranty_End_Date_Non_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mask Warranty End Date</label>
    <type>Date</type>
</CustomField>