force-app/main/default/objects/Account/fields/MCS_Brand_Transacted__c.field-meta.xml
<CustomField>
    <fullName>MCS_Brand_Transacted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this customer has transacted with MCS based on the invoices.</description>
    <label>MCS Brand Transacted</label>
    <type>Checkbox</type>
</CustomField>