force-app/main/default/objects/Account/fields/Medicare_Card_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Card_Expiry__c</fullName>
    <description>Field to store Medicare card expiry date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Medicare Card Expiry</label>
    <type>Date</type>
</CustomField>