force-app/main/default/objects/Account/fields/Medicare_Card_IRN__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Card_IRN__c</fullName>
    <description>A field to store the individual reference number (MYOB/CorePlus).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Medicare Card IRN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>