force-app/main/default/objects/Account/fields/Medicare_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Card_Number__c</fullName>
    <description>A field to store Medicare Card Number held by a patient (MYOB/CorePlus).</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Medicare Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>