force-app/main/default/objects/Account/fields/Member_Created_Month__c.field-meta.xml
<CustomField>
    <fullName>Member_Created_Month__c</fullName>
    <formula>Month(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Created Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>