force-app/main/default/objects/Account/fields/Member_Created_Year__c.field-meta.xml
<CustomField>
    <fullName>Member_Created_Year__c</fullName>
    <formula>YEAR(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Created Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>