force-app/main/default/objects/Account/fields/membershipJoinDate__c.field-meta.xml
<CustomField>
    <fullName>membershipJoinDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Membership Join Date</label>
    <type>Date</type>
</CustomField>