force-app/main/default/objects/Account/fields/MembershipNumber_Auto__c.field-meta.xml
<CustomField>
    <fullName>MembershipNumber_Auto__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Membership Number (Auto)</label>
    <type>AutoNumber</type>
</CustomField>