force-app/main/default/objects/Account/fields/membershipNumberFinal__c.field-meta.xml
<CustomField>
    <fullName>membershipNumberFinal__c</fullName>
    <formula>IF( ISBLANK( membershipNumberOriginal__c ), MembershipNumber_Auto__c , membershipNumberOriginal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Number</label>
    <type>Text</type>
</CustomField>