force-app/main/default/objects/Account/fields/membershipNumberOriginal__c.field-meta.xml
<CustomField>
    <fullName>membershipNumberOriginal__c</fullName>
    <description>Membership Number migrated from the old SV system.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Membership Number migrated from the old SV system.</inlineHelpText>
    <label>Membership Number (Original)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>