force-app/main/default/objects/Account/fields/myAir__c.field-meta.xml
<CustomField>
    <fullName>myAir__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Registered on myAir or not</description>
    <label>myAir</label>
    <type>Checkbox</type>
</CustomField>