force-app/main/default/objects/Account/fields/Number_of_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Approvals__c</fullName>
    <description>Number of approvals for this customers</description>
    <inlineHelpText>Number of approvals for this customers</inlineHelpText>
    <label>Number of Approvals</label>
    <summaryForeignKey>Approval__c.Related_To_Member_Patient__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>