force-app/main/default/objects/Account/fields/Number_of_Emergency_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Emergency_Approvals__c</fullName>
    <description>Number of emergency approvals for this customers</description>
    <label>Number of Emergency Approvals</label>
    <summaryFilterItems>
        <field>Approval__c.Approval_Type__c</field>
        <operation>equals</operation>
        <value>Emergency</value>
    </summaryFilterItems>
    <summaryForeignKey>Approval__c.Related_To_Member_Patient__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>