force-app/main/default/objects/Account/fields/Number_of_Emergency_Prescriptions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Emergency_Prescriptions__c</fullName>
    <formula>Number_of_Prescriptions__c -  Number_of_Regular_Prescriptions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Emergency Prescriptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>