force-app/main/default/objects/Account/fields/Number_Of_Home_Sleep_Tests__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Home_Sleep_Tests__c</fullName>
    <label>Number Of Home Sleep Tests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>