force-app/main/default/objects/Account/fields/Number_of_Masks_Used__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Masks_Used__c</fullName>
    <label>Number of Masks Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>