force-app/main/default/objects/Account/fields/Number_of_Prescriptions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Prescriptions__c</fullName>
    <description>Number of Prescriptions</description>
    <label>Number of Prescriptions</label>
    <summaryForeignKey>Prescription__c.Related_To_Member_Patient__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>