force-app/main/default/objects/Account/fields/Number_of_Regular_Prescriptions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Regular_Prescriptions__c</fullName>
    <label>Number of Regular Prescriptions</label>
    <summaryFilterItems>
        <field>Prescription__c.Emergency_Prescription__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Prescription__c.Related_To_Member_Patient__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>