force-app/main/default/objects/Account/fields/Number_Of_Titrating__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Titrating__c</fullName>
    <label>Number Of Titrating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>