force-app/main/default/objects/Account/fields/On_Boarding_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Date__c</fullName>
    <description>This date is the date the on boarding journey starts</description>
    <encryptionScheme>None</encryptionScheme>
    <label>On Boarding Date</label>
    <type>Date</type>
</CustomField>