force-app/main/default/objects/Account/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is to be ticked when a patient signs up to SV</description>
    <label>Onboarding</label>
    <type>Checkbox</type>
</CustomField>