force-app/main/default/objects/Account/fields/Online_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Online_Account_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Online Account Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>