force-app/main/default/objects/Account/fields/Online_City__c.field-meta.xml
<CustomField>
    <fullName>Online_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Online City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>