force-app/main/default/objects/Account/fields/Online_Country__c.field-meta.xml
<CustomField>
    <fullName>Online_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Online Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>