force-app/main/default/objects/Account/fields/Online_Geo_Code_Source__c.field-meta.xml
<CustomField>
    <fullName>Online_Geo_Code_Source__c</fullName>
    <description>Determines if the Outlet Latitude and Longitude details are copied from Find Nearby fields</description>
    <inlineHelpText>Determines if the Outlet Latitude and Longitude details are copied from Find Nearby fields</inlineHelpText>
    <label>Online Geo Code Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Use Find Nearby</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>