force-app/main/default/objects/Account/fields/Online_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Online_Latitude__c</fullName>
    <description>Sleep Outlet Latitude to be used on Store Locator on website</description>
    <inlineHelpText>Sleep Outlet Latitude to be used on Store Locator on website</inlineHelpText>
    <label>Online Latitude</label>
    <precision>13</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>