force-app/main/default/objects/Account/fields/Online_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Online_Longitude__c</fullName>
    <description>Sleep Outlet Longitdue used for website store locator</description>
    <inlineHelpText>Sleep Outlet Longitdue used for website store locator</inlineHelpText>
    <label>Online Longitude</label>
    <precision>13</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>