force-app/main/default/objects/Account/fields/Online_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Online_Postcode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Online Postcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>