force-app/main/default/objects/Account/fields/Online_State__c.field-meta.xml
<CustomField>
    <fullName>Online_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Online State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>