force-app/main/default/objects/Account/fields/Online_Store__c.field-meta.xml
<CustomField>
    <fullName>Online_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this Authorised Dealer have an online store</description>
    <inlineHelpText>Does this Authorised Dealer have an online store?</inlineHelpText>
    <label>Online Store</label>
    <type>Checkbox</type>
</CustomField>