force-app/main/default/objects/Account/fields/Online_Street__c.field-meta.xml
<CustomField>
    <fullName>Online_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Online Street</label>
    <type>TextArea</type>
</CustomField>