force-app/main/default/objects/Account/fields/Oracle_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Org_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Org ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>