force-app/main/default/objects/Account/fields/Oracle_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Salesperson__c</fullName>
    <label>Oracle Salesperson</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFF - Affiliates</fullName>
            </value>
            <value>
                <fullName>Australia Sales</fullName>
            </value>
            <value>
                <fullName>Inside Sales Support</fullName>
            </value>
            <value>
                <fullName>NSW - Northern/Southern</fullName>
            </value>
            <value>
                <fullName>NSW1 - Northern NSW</fullName>
            </value>
            <value>
                <fullName>NSW2 - Southern NSW</fullName>
            </value>
            <value>
                <fullName>NZ Sales</fullName>
            </value>
            <value>
                <fullName>QLD1 - QLD</fullName>
            </value>
            <value>
                <fullName>QLD2 - QLD</fullName>
            </value>
            <value>
                <fullName>QLD3 - QLD</fullName>
            </value>
            <value>
                <fullName>NT1 - NT</fullName>
            </value>
            <value>
                <fullName>SA1 - SA</fullName>
            </value>
            <value>
                <fullName>TAS1 - TAS</fullName>
            </value>
            <value>
                <fullName>VIC1 - VIC</fullName>
            </value>
            <value>
                <fullName>VIC2 - VIC</fullName>
            </value>
            <value>
                <fullName>WA1 - WA</fullName>
            </value>
            <value>
                <fullName>WA2 - WA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>