force-app/main/default/objects/Account/fields/Oracle_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Site_ID__c</fullName>
    <description>TEST</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Site ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>