force-app/main/default/objects/Account/fields/OracleActName__c.field-meta.xml
<CustomField>
    <fullName>OracleActName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oracle Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>