force-app/main/default/objects/Account/fields/OracleActNumber__c.field-meta.xml
<CustomField>
    <fullName>OracleActNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Oracle Account Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>