force-app/main/default/objects/Account/fields/Parent_Account_Warning__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Warning__c</fullName>
    <formula>&quot;Do not log contacts and activities against this parent account&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Warning</label>
    <type>Text</type>
</CustomField>